--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<body>
 		<h1>Classes</h1>
 		<h2>HTML, CSS, and Javascript for Web Developers</h2>
-		<a href="assignment1/index.html">Assignment 1</a>
+		<a href="module1/index.html">Module 1</a> <br>
+		<a href="module2/index.html">Module 2</a>
 	</body>
 </html>
