fixed links and error on module 3

--- a/module3/index.html
+++ b/module3/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Module 2 Assignment</title>
+    <title>Module 3 Assignment</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
@@ -47,7 +47,7 @@
     </nav><!-- #header-nav -->
   </header>
 
-  <h2 class="text-center">Starters</h2>
+  <h2 id="top" class="text-center">Starters</h2>
 
     <div id="main-content" class="container">
       <div id="poke-tiles" class="row">
@@ -58,7 +58,7 @@
             <p>
               Rowlet can attack without making a sound! It flies silently through the skies, drawing near to its opponent without being noticed, and then lashing out with powerful kicks. It can also attack from a distance using the razor-sharp leaves that form part of its feathers. <br>
               Its visual abilities are impressive. The darkness of night is no obstacle to Rowlet! It can twist its neck nearly 180° from front to back so it can see directly behind itself. It has a habit of turning its head in battle to face its Trainer and receive instructions. <br>
-              <a href="#header-nav">Back to top</a>
+              <a href="#top">Back to top</a>
             </p>
           </div>
         </div>
@@ -71,7 +71,7 @@
               Logical but also passionate, Litten always remains coolheaded and doesn't show its emotions on the surface. <br>
               Litten can attack with flaming hairballs! Its fur is rich in oils and immensely flammable. Litten grooms itself by licking its fur, and then uses the collected fur as fuel for fireball attacks!<br>
               When the time comes for Litten to shed its old fur, it all burns up in a glorious blaze.  <br>
-              <a href="#header-nav">Back to top</a>
+              <a href="#top">Back to top</a>
             </p>
           </div>
         </div>
@@ -84,7 +84,7 @@
               Popplio's swimming speed is known to exceed 25 mph. It's better at moving in the water than on land. Still, when it's on land, it takes advantage of the elasticity of its balloons to perform acrobatic stunts and jumps.<br>
               Popplio can snort out balloons made of water! Watch it spin water balloons into a playful battle strategy!<br>
               Both frivolous and hard-working, Popplio can easily get carried away—unleashing enough power in battle to make quite a spectacle! But Popplio’s determined spirit means it can usually be found practicing hard on its balloon skills. <br>
-              <a href="#header-nav">Back to top</a>
+              <a href="#top">Back to top</a>
             </p>
           </div>
         </div>
